--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "lint:scss": "stylelint 'src/**/*.scss' --syntax scss",
     "lint:scss:fix": "stylelint 'src/**/*.scss' --syntax scss --fix",
-    "lint:js": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
+    "lint:js": "eslint **/*.js",
     "lint:js:fix": "npm run lint:js -- --fix"
   },
   "author": "",
